WIP Api endpoint to create uplifts
